# cainteoir-gtk

./: .gitignore  Makefile.am  NEWS  README  README.md  autogen.sh  build.sh  configure.ac
.tx/: config
data/themes/: gtk3-common.css  gtk3-common.css.in
data/themes/Adwaita/: gtk3.css  gtk3.css.in
data/themes/Ambiance/: gtk3.css  gtk3.css.in
data/themes/Radiance/: gtk3.css  gtk3.css.in
data/ui/: cainteoir-gtk.ui
debian/: cainteoir-gtk.install  changelog  control  copyright  libcainteoir-gtk-dev.install  libcainteoir-gtk0.install  lucid.patch  oneiric.patch  rules
docs/: ReleaseNotes.md
m4/: gtk3capabilities.m4
po/: LINGUAS  Makevars  POTFILES.in  af.po  ak.po  am.po  an.po  ar.po  as.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ca_AD.po  ca_FR.po  ca_IT.po  cs.po  cy.po  da.po  de.po  de_CH.po  dv.po  dz.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  en_NZ.po  en_US.po  eo.po  es.po  es_AR.po  es_MX.po  (+114 more)
src/: cainteoir-editor.desktop  cainteoir-gtk.desktop  cainteoir.cpp  cainteoir.hpp  compatibility.cpp  compatibility.hpp  document.cpp  document.hpp  gtk-compatibility.cpp  gtk-compatibility.hpp  gtkmm-compatibility.hpp  gtkobjectref.hpp  i18n.h  ipa.cpp  ipa.hpp  library.cpp  library.hpp  libraryentrycellrenderer.cpp  libraryentrycellrenderer.h  main.cpp  metadata.cpp  metadata.hpp  navbar.cpp  navbar.hpp  settings.cpp  settings.hpp  settings_view.cpp  settings_view.hpp  timebar.cpp  timebar.hpp  toc.cpp  toc.hpp  voice_selection.cpp  voice_selection.hpp
src/editor/: main.cpp
src/extensions/: glib.h
src/include/cainteoir-gtk/: cainteoir_audio_data.h  cainteoir_audio_data_s16.h  cainteoir_document.h  cainteoir_document_index.h  cainteoir_document_view.h  cainteoir_metadata.h  cainteoir_settings.h  cainteoir_speech_parameter.h  cainteoir_speech_synthesizers.h  cainteoir_speech_voice_view.h  cainteoir_supported_formats.h  cainteoir_timebar.h  cainteoir_waveform_view.h
src/libcainteoir-gtk/: cainteoir_audio_data.cpp  cainteoir_audio_data_s16.cpp  cainteoir_document.cpp  cainteoir_document_index.cpp  cainteoir_document_index_private.h  cainteoir_document_private.h  cainteoir_document_view.cpp  cainteoir_metadata.cpp  cainteoir_metadata_private.h  cainteoir_settings.cpp  cainteoir_speech_parameter.cpp  cainteoir_speech_parameter_private.h  cainteoir_speech_synthesizers.cpp  cainteoir_speech_synthesizers_private.h  cainteoir_speech_voice_view.cpp  cainteoir_supported_formats.cpp  cainteoir_timebar.cpp  cainteoir_waveform_view.cpp  document.cpp
src/reader/: main.cpp  reader_application.cpp  reader_application.h  reader_document_view.cpp  reader_document_view.h  reader_preferences.cpp  reader_preferences.h  reader_settings_view.cpp  reader_settings_view.h  reader_window.cpp  reader_window.h
tests/: content.cpp  header_c_compat.c
ui/: cainteoir-gtk.ui
